[package]
name = "Win11SupportFeed"
version = "2024.9.9"
edition = "2021"
authors = ["cjee21"]
repository = "https://github.com/cjee21/Win11SupportFeed"

[dependencies]

# https://crates.io/crates/windows
[dependencies.windows]
version = "0.58.0"
features = [
    "Foundation_Collections",
    "Web_Syndication",
    "Globalization_DateTimeFormatting",
]

[build-dependencies]
# https://crates.io/crates/embed-resource
embed-resource = "2.4"

[[bin]]
name = "Windows11_SupportFeed_to_HTML"
path = "src/main.rs"
